Fix fld file import with singlemode expansion

--- a/solvers/IncNavierStokesSolver/CMakeLists.txt
+++ b/solvers/IncNavierStokesSolver/CMakeLists.txt
@@ -76,6 +76,7 @@ IF( NEKTAR_SOLVER_INCNAVIERSTOKES )
     ADD_NEKTAR_TEST(PrismHex_channel_m4)
     ADD_NEKTAR_TEST(HM)
     ADD_NEKTAR_TEST(HM_Adj)
+    ADD_NEKTAR_TEST(HM_Adj_SingleMode_files)
     ADD_NEKTAR_TEST(bfs_tg LENGTHY)
     ADD_NEKTAR_TEST(SM)
     ADD_NEKTAR_TEST(SM_base_file)
