--- a/solvers/CompressibleFlowSolver/CMakeLists.txt
+++ b/solvers/CompressibleFlowSolver/CMakeLists.txt
@@ -121,9 +121,11 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
     ADD_NEKTAR_TEST(Couette_FRSD_LFRSD_MODIFIED_3DHOMO1D_MVM)
     ADD_NEKTAR_TEST(CylinderSubsonic_NS_FRSD_LFRSD_MODIFIED_3DHOMO1D_MVM)
     ADD_NEKTAR_TEST(CylinderSubsonic_WeakDG_Implicit)
+    # disabled since it uses the old implementation of the StagnationInflowBC
+    #ADD_NEKTAR_TEST(Nozzle_AxiSym_NoSwirl)
+    # disabled since it uses the old implementation of the StagnationInflowBC
+    #ADD_NEKTAR_TEST(Nozzle_AxiSym_Swirl)
     ADD_NEKTAR_TEST(implicitSolverCallsSFD LENGTHY)
-    ADD_NEKTAR_TEST(Nozzle_AxiSym_NoSwirl)
-    ADD_NEKTAR_TEST(Nozzle_AxiSym_Swirl)
     ADD_NEKTAR_TEST(Nozzle_Quasi1D_P6)
     ADD_NEKTAR_TEST(PipeFlow_NSAxisym)
     ADD_NEKTAR_TEST(hump3D_GLL)
@@ -139,6 +141,9 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
     ADD_NEKTAR_TEST(ShockTube_2D_mixedMesh_AV_Phys_Mod_LDGNS)
     ADD_NEKTAR_TEST(ShockTube_2D_mixedMesh_AV_Phys_Dil_IP_Impl)
     ADD_NEKTAR_TEST(TimeDependentAbsorption)
+    ADD_NEKTAR_TEST(SquareDomain_Euler_2D_AxialFlow)
+    ADD_NEKTAR_TEST(SquareDomain_Euler_2D_DiagonalFlow)
+    ADD_NEKTAR_TEST(Duct_Euler_2D_AxiSym_ForcedVortexSwirl)
     ADD_NEKTAR_TEST(EmbededCylinder2D)
     ADD_NEKTAR_TEST(Movement_fixed_couette)
 
